WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281977
[GStreamer][WebCodecs] H.264 encoding fixes
https://bugs.webkit.org/show_bug.cgi?id=281977
Summary
[GStreamer][WebCodecs] H.264 encoding fixes
Philippe Normand
Reported
2024-10-23 08:48:55 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2024-10-23 08:53:06 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35630
EWS
Comment 2
2024-10-25 00:41:21 PDT
Committed
285691@main
(019a912ac61b): <
https://commits.webkit.org/285691@main
> Reviewed commits have been landed. Closing PR #35630 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-10-25 00:43:08 PDT
<
rdar://problem/138617275
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug