Cherry-pick 285691@main (019a912ac61b). https://bugs.webkit.org/show_bug.cgi?id=281977

[GStreamer][WebCodecs] H.264 encoding fixes
    https://bugs.webkit.org/show_bug.cgi?id=281977

    Reviewed by Xabier Rodriguez-Calvar.

    While debugging some mediarecorder test failure a caps negotiation issue was detected in our video
    encoder. Encodebin2 was expecting an avc stream on the encoder output. Updating our encoder
    accordingly made some WebCodec tests pass. In addition to that change, the X264 encoder is
    explicitely configured according to the requested H.264 profile.

    * LayoutTests/platform/glib/imported/w3c/web-platform-tests/webcodecs/video-encoder-h264.https.any.worker_baseline-expected.txt: Removed.
    * LayoutTests/platform/glib/imported/w3c/web-platform-tests/webcodecs/video-encoder-h264.https.any.worker_high-expected.txt: Removed.
    * LayoutTests/platform/glib/imported/w3c/web-platform-tests/webcodecs/video-encoder-h264.https.any.worker_main-expected.txt: Removed.
    * LayoutTests/platform/glib/imported/w3c/web-platform-tests/webcodecs/video-encoder-h264.https.any_baseline-expected.txt: Removed.
    * LayoutTests/platform/glib/imported/w3c/web-platform-tests/webcodecs/video-encoder-h264.https.any_high-expected.txt: Removed.
    * LayoutTests/platform/glib/imported/w3c/web-platform-tests/webcodecs/video-encoder-h264.https.any_main-expected.txt: Removed.
    * Source/WebCore/platform/gstreamer/VideoEncoderPrivateGStreamer.cpp:
    (webkit_video_encoder_class_init):

    Canonical link: https://commits.webkit.org/285691@main

Canonical link: https://commits.webkit.org/282416.253@webkitglib/2.46